--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "jest": "^27.0.5",
     "typescript": "^4.3.4"
   }
 }
