--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stored-fetch",
-  "version": "1.0.0",
+  "name": "cached-fetch",
+  "version": "0.1.0",
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
